Add -g to compile options
I am not sure that the generated code is not optimized away.
It seems the output of
objdump -d -S build/tests/Release/bench_is_invalid_method | less
does not call is_invalid_method[12345].

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,7 +8,7 @@ include(GoogleTest)
 gtest_discover_tests(sample1_unittest)
 
 add_executable(bench_is_invalid_method bench_is_invalid_method.cc)
-target_compile_options(bench_is_invalid_method PRIVATE -march=x86-64-v3)
+target_compile_options(bench_is_invalid_method PRIVATE -g -march=x86-64-v3)
 target_link_libraries(bench_is_invalid_method PRIVATE benchmark::benchmark)
 add_custom_target(
   bench
